hphp/test/zend/bad/ext-standard-file/bug41693.php
<?php

var_dump(scandir(''));

echo "Done\n";
?>